# logreader

./: CMakeLists.txt  README.md
app/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m  processor.cpp  processor.h  resreader.cpp  resreader.h
app/Base.lproj/: Main.storyboard
app/logreader.xcodeproj/: project.pbxproj
app/logreader.xcodeproj/xcuserdata/yop.xcuserdatad/xcschemes/: xcschememanagement.plist
cmd/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  basic.h  deque.h  logreader.cpp  logreader.h
logreader.xcworkspace/: contents.xcworkspacedata
